--- a/catalogo2.html
+++ b/catalogo2.html
@@ -79,11 +79,12 @@
                         </a>
                       
                         <div class="dropdown-menu" aria-labelledby="dropdownMenuLink">
-                          <a class="dropdown-item" href="#">Jogos</a>
-                          <a class="dropdown-item" href="#">Séries</a>
-                          <a class="dropdown-item" href="#">Desenhos</a>
-                          <a class="dropdown-item" href="#">Animes</a>
-                          <a class="dropdown-item" href="#">Bandas</a>
+                          <a class="dropdown-item" href="#">MMORPG</a>
+                          <a class="dropdown-item" href="#">Arcade</a>
+                          <a class="dropdown-item" href="#">Simulação</a>
+                          <a class="dropdown-item" href="#">FPS</a>
+                          <a class="dropdown-item" href="#">Aventura</a>
+                          <a class="dropdown-item" href="#">Tabuleiro</a>
                         </div>
                       </div>
                 </div>
@@ -96,7 +97,7 @@
 
                       <div id="ha">
                       <div id="" class="card text-center" style="width: 10rem;">
-                            <img class="card-img-top" src="https://assets.xtechcommerce.com/uploads/images/medium/1dcc9cbfe33011c0c972747512d88bc4.jpg" alt="Card image cap">
+                            <img class="card-img-top" src="https://upload.wikimedia.org/wikipedia/pt/5/5f/LIS_Before_the_Storm_capa.jpg" alt="Card image cap">
                             <div class="card-body">
                                 <h5 class="card-title">Nome do Item</h5>
                                 <p class="card-text">R$ 00,00</p>
@@ -109,7 +110,7 @@
 
 
                         <div id="" class="card text-center" style="width: 10rem;">
-                                <img class="card-img-top" src="https://assets.xtechcommerce.com/uploads/images/medium/1dcc9cbfe33011c0c972747512d88bc4.jpg" alt="Card image cap">
+                                <img class="card-img-top" src="https://upload.wikimedia.org/wikipedia/pt/5/5f/LIS_Before_the_Storm_capa.jpg" alt="Card image cap">
                                 <div class="card-body">
                                         <h5 class="card-title">Nome do Item</h5>
                                         <p class="card-text">R$ 00,00</p>
@@ -123,7 +124,7 @@
                             
 
                             <div id="" class="card text-center" style="width: 10rem;">
-                                    <img class="card-img-top" src="https://assets.xtechcommerce.com/uploads/images/medium/1dcc9cbfe33011c0c972747512d88bc4.jpg" alt="Card image cap">
+                                    <img class="card-img-top" src="https://upload.wikimedia.org/wikipedia/pt/5/5f/LIS_Before_the_Storm_capa.jpg" alt="Card image cap">
                                     <div class="card-body">
                                             <h5 class="card-title">Nome do Item</h5>
                                             <p class="card-text">R$ 00,00</p>
@@ -137,7 +138,7 @@
 
 
                             <div id="" class="card text-center" style="width: 10rem;">
-                                 <img class="card-img-top" src="https://assets.xtechcommerce.com/uploads/images/medium/1dcc9cbfe33011c0c972747512d88bc4.jpg" alt="Card image cap">
+                                 <img class="card-img-top" src="https://upload.wikimedia.org/wikipedia/pt/5/5f/LIS_Before_the_Storm_capa.jpg" alt="Card image cap">
                                   <div class="card-body">
                                     <h5 class="card-title">Nome do Item</h5>
                                     <p class="card-text">R$ 00,00</p></div>
@@ -152,7 +153,7 @@
 
 
                             <div id="" class="card text-center" style="width: 10rem;">
-                                    <img class="card-img-top" src="https://assets.xtechcommerce.com/uploads/images/medium/1dcc9cbfe33011c0c972747512d88bc4.jpg" alt="Card image cap">
+                                    <img class="card-img-top" src="https://upload.wikimedia.org/wikipedia/pt/5/5f/LIS_Before_the_Storm_capa.jpg" alt="Card image cap">
                                     <div class="card-body">
                                             <h5 class="card-title">Nome do Item</h5>
                                             <p class="card-text">R$ 00,00</p>
@@ -166,7 +167,7 @@
 
 
                                 <div id="" class="card text-center" style="width: 10rem;">
-                                    <img class="card-img-top" src="https://assets.xtechcommerce.com/uploads/images/medium/1dcc9cbfe33011c0c972747512d88bc4.jpg" alt="Card image cap">
+                                    <img class="card-img-top" src="https://upload.wikimedia.org/wikipedia/pt/5/5f/LIS_Before_the_Storm_capa.jpg" alt="Card image cap">
                                     <div class="card-body">
                                             <h5 class="card-title">Nome do Item</h5>
                                             <p class="card-text">R$ 00,00</p>
