--- a/cadastro.html
+++ b/cadastro.html
@@ -101,7 +101,7 @@
                   <button type="button" class="btn btn-secondary btn-sm btn-block">Entrar com o Google</button>
                   <br>
                   <div id="textaligne">
-                    <a href="cadastro.html">Já possui uma conta? Faça Login</a>
+                    <a href="login.html">Já possui uma conta? Faça Login</a>
                   </div>
                   <br>
                   <br>
