--- a/home.html
+++ b/home.html
@@ -116,7 +116,7 @@
                   <img src="a6.png" width="90" height="90">
                   <p>
                     Cadastre-se e ganhe 10% de desconto</p>
-                    <a href="informacoes.html"><button type="button" class="btn btn-outline-danger">Cadastrar</button></a>
+                    <a href="cadastrar.html"><button type="button" class="btn btn-outline-danger">Cadastrar</button></a>
                 </div>
               </div>
 
