--- a/login.html
+++ b/login.html
@@ -70,7 +70,7 @@
 
                 
                 <br>
-                <h2 id="textaligne">Cadastre-se</h2>
+                <h2 id="textaligne">Login</h2>
                  <br>
                  <br>
                  <form>
