--- a/index.html
+++ b/index.html
@@ -30,7 +30,7 @@
     <div class="collapse navbar-collapse justify-content-between" id="navbar2">
     <ul class="navbar-nav">
         <li class="nav-item">
-            <a class="nav-link" href="Home.html"  aria-haspopup="true" aria-expanded="false">
+            <a class="nav-link" href="index.html"  aria-haspopup="true" aria-expanded="false">
             Home
             </a>
             </li>
@@ -57,7 +57,7 @@
       </li>
 
       <li class="nav-item">
-        <a class="nav-link" href="catalogo.html"  aria-haspopup="true" aria-expanded="false">
+        <a class="nav-link" href="cadastro.html"  aria-haspopup="true" aria-expanded="false">
         Acessórios
         </a>
         </li>
