--- a/index.html
+++ b/index.html
@@ -1,4 +1,4 @@
-
+<!DOCTYPE html>
 
 <html>
 <head>
@@ -195,7 +195,7 @@
 
 
 
-      <script src="https://code.jquery.com/jquery-3.2.1.slim.min.js" integrity="sha384-KJ3o2DKtIkvYIK3UENzmM7KCkRr/rE9/Qpg6aAZGJwFDMVNA/GpGFF93hXpG5KkN" crossorigin="anonymous"></script>
+     <script src="https://code.jquery.com/jquery-3.2.1.slim.min.js" integrity="sha384-KJ3o2DKtIkvYIK3UENzmM7KCkRr/rE9/Qpg6aAZGJwFDMVNA/GpGFF93hXpG5KkN" crossorigin="anonymous"></script>
 <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.12.9/umd/popper.min.js" integrity="sha384-ApNbgh9B+Y1QKtv3Rn7W3mgPxhU9K/ScQsAP7hUibX39j7fakFPskvXusvfa0b4Q" crossorigin="anonymous"></script>
 <script src="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/js/bootstrap.min.js" integrity="sha384-JZR6Spejh4U02d8jOt6vLEHfe/JQGiRRSQQxSfFWpi1MquVdAyjUar5+76PVCmYl" crossorigin="anonymous"></script>
 
@@ -205,7 +205,18 @@
 
 <script src="sw.js"></script>
 
-
+<script>
+if (navigator.serviceWorker.controller) {
+ console.log('[PWA Builder] active service worker found, no need to register')
+} else {
+ //Register the ServiceWorker
+ navigator.serviceWorker.register('pwabuilder-sw.js', {
+    scope: './'
+ }).then(function(reg) {
+    console.log('Service worker has been registered for scope:'+ reg.scope);
+ });
+}
+</script>
 
 </body>
 </html>
